<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/shoedetail_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".screen.shoedetail.ShoeDetailFragment">

        <TextView
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="164dp"
            android:text="@string/lblShoeName"
            app:layout_constraintStart_toStartOf="@+id/textView9"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="MissingConstraints" />

        <EditText
            android:id="@+id/txtShoeName2"
            android:layout_width="262dp"
            android:layout_height="48dp"
            android:background="@drawable/txtround_style"
            android:ems="10"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:paddingLeft="10dp"
            app:layout_constraintBottom_toBottomOf="@+id/textView8"
            app:layout_constraintStart_toEndOf="@+id/textView8"
            app:layout_constraintStart_toStartOf="@+id/txtCompany"
            app:layout_constraintTop_toTopOf="@+id/textView8"
            tools:ignore="SpeakableTextPresentCheck" />

        <TextView
            android:id="@+id/textView9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="76dp"
            android:text="@string/lblCompany"
            app:layout_constraintStart_toStartOf="@+id/textView10"
            app:layout_constraintTop_toBottomOf="@+id/textView8"
            tools:ignore="MissingConstraints" />

        <EditText
            android:id="@+id/txtCompany"
            android:layout_width="258dp"
            android:layout_height="49dp"
            android:background="@drawable/txtround_style"
            android:ems="10"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:paddingLeft="10dp"
            app:layout_constraintBottom_toBottomOf="@+id/textView9"
            app:layout_constraintStart_toEndOf="@+id/textView9"
            app:layout_constraintStart_toStartOf="@+id/txtShoeSize"
            app:layout_constraintTop_toTopOf="@+id/textView9" />

        <TextView
            android:id="@+id/textView10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="76dp"
            android:text="@string/lblShoeSize"
            app:layout_constraintStart_toStartOf="@+id/lblDescriptrio"
            app:layout_constraintTop_toBottomOf="@+id/textView9"
            tools:ignore="MissingConstraints" />

        <EditText
            android:id="@+id/txtShoeSize"
            android:layout_width="258dp"
            android:layout_height="49dp"
            android:background="@drawable/txtround_style"
            android:ems="10"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:paddingLeft="10dp"
            app:layout_constraintBottom_toBottomOf="@+id/textView10"
            app:layout_constraintStart_toEndOf="@+id/textView10"
            app:layout_constraintStart_toStartOf="@+id/txtDescription"
            app:layout_constraintTop_toTopOf="@+id/textView10" />

        <TextView
            android:id="@+id/lblDescriptrio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="76dp"
            android:text="@string/lblDescription"
            app:layout_constraintEnd_toStartOf="@+id/txtDescription"
            app:layout_constraintHorizontal_bias="0.477"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView10"
            tools:ignore="MissingConstraints" />


        <EditText
            android:id="@+id/txtDescription"
            android:layout_width="258dp"
            android:layout_height="49dp"
            android:background="@drawable/txtround_style"
            android:ems="10"
            android:inputType="textPersonName"
            android:paddingLeft="10dp"
            app:layout_constraintBottom_toBottomOf="@+id/lblDescriptrio"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/lblDescriptrio"
            app:layout_constraintTop_toTopOf="@+id/lblDescriptrio"
            app:layout_constraintVertical_bias="0.481"
            tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

        <Button
            android:id="@+id/btnCancel"
            android:layout_width="164dp"
            android:layout_height="55dp"
            android:layout_marginStart="16dp"
            android:layout_marginBottom="4dp"
            android:text="@android:string/cancel"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/btnSave" />

        <Button
            android:id="@+id/btnSave"
            android:layout_width="164dp"
            android:layout_height="55dp"
            android:layout_marginBottom="4dp"
            android:text="Save"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/btnCancel"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="20dp" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>